tests/init_state/ref_obligations/drop_deref_of_mut_ref_leaks_pointee.sim
# `drop *r` on r: &mut consumes the pointee, transitioning r to
# (Uninit, Init). Without re-init, obligation at return is unmet.
fn f(r: &mut i64) {
  entry:
    drop r.*;
    return
}
